feat: upload produced binary as job artifact
Signed-off-by: Laurent Gil <lg7983@gmail.com>

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,3 +25,8 @@ jobs:
       run: make lint
     - name: test
       run: make check
+    - uses: actions/upload-artifact@v3
+      with:
+        name: contour-authserver
+        path: bin/contour-authserver # or path/to/artifact      
+    
